--- a/src/main/resources/reports/medidas.jrxml
+++ b/src/main/resources/reports/medidas.jrxml
@@ -157,7 +157,7 @@ ORDER BY m.data_registro DESC]]>
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<image>
 				<reportElement x="40" y="23" width="168" height="105" uuid="5e2b6079-eb02-4453-977e-473686ee53f8"/>
-				<imageExpression><![CDATA["C:/Users/pedro/Documents/GitHub/Tarefas/logo_750.png"]]></imageExpression>
+				<imageExpression><![CDATA["https://raw.githubusercontent.com/pedroinaciop/tcc_BackEnd/refs/heads/main/src/main/resources/images/logo_750.png"]]></imageExpression>
 			</image>
 			<staticText>
 				<reportElement x="290" y="60" width="200" height="20" uuid="449471d5-f384-4f89-9cb9-8fe4089693cd"/>
