--- a/src/main/resources/reports/refeicoes.jrxml
+++ b/src/main/resources/reports/refeicoes.jrxml
@@ -93,43 +93,52 @@ ORDER BY r.data_registro DESC;]]>
 		<band height="150">
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<image>
-				<reportElement x="40" y="23" width="168" height="105" uuid="eabf7871-114b-45bf-904e-c122f0c8172e"/>
+				<reportElement x="40" y="23" width="110" height="105" uuid="eabf7871-114b-45bf-904e-c122f0c8172e">
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+				</reportElement>
 				<imageExpression><![CDATA["https://raw.githubusercontent.com/pedroinaciop/tcc_BackEnd/refs/heads/main/src/main/resources/images/logo_750.png"]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="290" y="60" width="200" height="20" uuid="2155d662-f7ad-4aca-8193-126177dfbea0"/>
-				<textElement>
-					<font fontName="Arial" size="16" isBold="true"/>
+				<reportElement x="220" y="62" width="304" height="24" uuid="b7bfc315-7347-43c2-86bd-d14c08cbf195">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="SansSerif" size="15" isBold="true"/>
 				</textElement>
-				<text><![CDATA[RELATÓRIO DE MEDIDAS]]></text>
+				<text><![CDATA[RELATÓRIO DE REFEIÇÕES]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="261" y="86" width="78" height="20" uuid="c6deb23b-183c-49fb-acef-a4c0bfba279b"/>
+				<reportElement x="220" y="86" width="88" height="20" uuid="59fc9954-bbd5-4587-9275-2970e7486303">
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+				</reportElement>
 				<textElement verticalAlignment="Bottom">
-					<font fontName="Arial" isBold="true"/>
+					<font fontName="SansSerif" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Período Inicial:]]></text>
 			</staticText>
 			<textField evaluationTime="Page" pattern="dd/MM/yyyy">
-				<reportElement x="340" y="86" width="60" height="20" uuid="373cb38c-4965-4df8-a829-621637c8c0c9"/>
+				<reportElement x="308" y="86" width="64" height="20" uuid="70a05e91-20a7-490a-9492-b41167169f27">
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+				</reportElement>
 				<textElement textAlignment="Left" verticalAlignment="Bottom">
-					<font fontName="Arial"/>
+					<font fontName="SansSerif"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{P_DATA_INICIAL}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="400" y="86" width="70" height="20" uuid="0cbd9882-e467-4aa9-a5d6-f2f3f1a5971c">
+				<reportElement x="372" y="86" width="88" height="20" uuid="1c0d46b7-02f6-43c0-b8d6-a02d7e8d5a78">
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 				<textElement verticalAlignment="Bottom">
-					<font fontName="Arial" isBold="true"/>
+					<font fontName="SansSerif" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Período Final:]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="470" y="86" width="60" height="20" uuid="a3955dae-7f76-423d-8424-893c02bfe610"/>
+				<reportElement x="460" y="86" width="64" height="20" uuid="9897eca0-8bc8-46f6-a8f2-fada9a57bf6a"/>
 				<textElement textAlignment="Left" verticalAlignment="Bottom">
-					<font fontName="Arial"/>
+					<font fontName="SansSerif"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{P_DATA_FINAL}]]></textFieldExpression>
 			</textField>
@@ -142,58 +151,58 @@ ORDER BY r.data_registro DESC;]]>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 				</reportElement>
 				<textElement>
-					<font fontName="Arial" size="12"/>
+					<font fontName="SansSerif" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nome_completo}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="180" y="0" width="70" height="31" uuid="b6beeee6-e2ed-4cb5-9d34-4b70acc28235"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial" size="12" isBold="true"/>
+					<font fontName="SansSerif" size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Idade]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="180" y="31" width="70" height="30" uuid="77a7f08b-e913-4680-aa5c-39cb7bd7550a"/>
 				<textElement>
-					<font fontName="Arial" size="12"/>
+					<font fontName="SansSerif" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{idade}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="250" y="0" width="100" height="31" uuid="97baca2d-b83d-4e53-b166-423f2759b663"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial" size="12" isBold="true"/>
+					<font fontName="SansSerif" size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Gênero]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="250" y="31" width="100" height="30" uuid="a341503b-49a9-4f9a-a81c-efc5cdd063d8"/>
 				<textElement>
-					<font fontName="Arial" size="12"/>
+					<font fontName="SansSerif" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{sexo_biologico}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="350" y="0" width="170" height="31" uuid="e3841064-fea0-4405-9b12-bc4780b9758a"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial" size="12" isBold="true"/>
+					<font fontName="SansSerif" size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[E-mail]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="350" y="31" width="170" height="30" uuid="4f04798e-4c06-4f01-86f4-4cc0e753a86f"/>
 				<textElement>
-					<font fontName="Arial" size="12"/>
+					<font fontName="SansSerif" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{email}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="41" y="0" width="139" height="31" uuid="993fc339-cca8-4dcb-8336-b2d9bb918ab3"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial" size="12" isBold="true"/>
+					<font fontName="SansSerif" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Idade]]></text>
+				<text><![CDATA[Nome]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
@@ -212,7 +221,7 @@ ORDER BY r.data_registro DESC;]]>
 					<rightPen lineWidth="0.5" lineColor="#D2D2D2"/>
 				</box>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial" size="12"/>
+					<font fontName="SansSerif" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA["CAFE_MANHA".equals($F{tipo_refeicao}) ? " Café da Manhã" :
 "ALMOCO".equals($F{tipo_refeicao}) ? " Almoço" :
@@ -231,7 +240,7 @@ ORDER BY r.data_registro DESC;]]>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Justified">
-					<font fontName="Arial" size="12"/>
+					<font fontName="SansSerif" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{alimentos}]]></textFieldExpression>
 			</textField>
@@ -240,7 +249,7 @@ ORDER BY r.data_registro DESC;]]>
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4c4fdd38-eae1-4e0a-a19b-9d637f8106e4"/>
 				</reportElement>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial" size="12" isBold="true"/>
+					<font fontName="SansSerif" size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Alimentos]]></text>
 			</staticText>
@@ -256,7 +265,7 @@ ORDER BY r.data_registro DESC;]]>
 					<rightPen lineWidth="0.5" lineColor="#D2D2D2"/>
 				</box>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial" size="12"/>
+					<font fontName="SansSerif" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.text.SimpleDateFormat(" dd/MM/yyyy HH:mm")
     .format(java.sql.Timestamp.valueOf( $F{data_registro}))]]></textFieldExpression>
@@ -277,7 +286,7 @@ ORDER BY r.data_registro DESC;]]>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#D2D2D2"/>
 				</box>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
-					<font fontName="Arial" size="12" isBold="true"/>
+					<font fontName="SansSerif" size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[ Data de Registro]]></text>
 			</staticText>
@@ -291,7 +300,7 @@ ORDER BY r.data_registro DESC;]]>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#D2D2D2"/>
 				</box>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
-					<font fontName="Arial" size="12" isBold="true"/>
+					<font fontName="SansSerif" size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[ Tipo de Refeição]]></text>
 			</staticText>
@@ -300,16 +309,22 @@ ORDER BY r.data_registro DESC;]]>
 	<pageFooter>
 		<band height="65" splitType="Stretch">
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
-			<textField pattern="dd/MM/yyyy hh:mm">
-				<reportElement x="41" y="20" width="100" height="30" uuid="5e3133c5-0661-49e4-a9d4-6254fc0c8247"/>
-				<textElement>
-					<font fontName="Arial" size="12"/>
+			<textField pattern="dd/MM/yyyy hh:mm:ss a">
+				<reportElement x="41" y="20" width="140" height="30" uuid="5e3133c5-0661-49e4-a9d4-6254fc0c8247">
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+				</reportElement>
+				<textElement verticalAlignment="Middle">
+					<font fontName="SansSerif" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="490" y="20" width="28" height="30" uuid="4e8e3036-e2b0-49e6-9a69-29a52e101cd5"/>
-				<textElement textAlignment="Right"/>
+				<reportElement x="490" y="20" width="30" height="30" uuid="4e8e3036-e2b0-49e6-9a69-29a52e101cd5">
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+				</reportElement>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font fontName="SansSerif" size="12"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 		</band>
