--- a/src/main/resources/reports/medidas.jrxml
+++ b/src/main/resources/reports/medidas.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 7.0.3.final using JasperReports Library version 6.20.1  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="medidas" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="5ab5ba55-fb6c-491c-8423-cc79e524e910">
+<jasperReport whenNoDataType="NoDataSection" xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="medidas" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="5ab5ba55-fb6c-491c-8423-cc79e524e910">
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="MySQL Connection"/>
 	<parameter name="P_USUARIO_ID" class="java.lang.Long"/>
@@ -891,14 +891,15 @@ ORDER BY m.data_registro DESC]]>
 	</detail>
 	<pageFooter>
 		<band height="65" splitType="Stretch">
-			<textField pattern="dd/MM/yyyy hh:mm:ss a">
+			<textField pattern="dd/MM/yyyy hh:mm:ss">
 				<reportElement x="41" y="20" width="140" height="30" uuid="7ccc54b2-7442-47a3-b45a-2700322e53a1">
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font fontName="SansSerif" size="12"/>
 				</textElement>
-				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[new java.text.SimpleDateFormat("dd/MM/yyyy HH:mm:ss", new java.util.Locale("pt", "BR"))
+    .format(new java.util.Date())]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="490" y="20" width="30" height="30" uuid="f43f3f2c-24f2-41a4-8c6c-a859fea4e83f">
