--- a/src/main/resources/reports/medidas.jrxml
+++ b/src/main/resources/reports/medidas.jrxml
@@ -898,8 +898,12 @@ ORDER BY m.data_registro DESC]]>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font fontName="SansSerif" size="12"/>
 				</textElement>
-				<textFieldExpression><![CDATA[new java.text.SimpleDateFormat("dd/MM/yyyy HH:mm:ss", new java.util.Locale("pt", "BR"))
-    .format(new java.util.Date())]]></textFieldExpression>
+				<textFieldExpression><![CDATA[new java.text.SimpleDateFormat("dd/MM/yyyy HH:mm:ss")
+    .format(
+        new java.util.Date(
+            new java.util.Date().getTime() - (3 * 60 * 60 * 1000)
+        )
+    )]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="490" y="20" width="30" height="30" uuid="f43f3f2c-24f2-41a4-8c6c-a859fea4e83f">
