--- a/src/main/resources/reports/refeicoes.jrxml
+++ b/src/main/resources/reports/refeicoes.jrxml
@@ -316,8 +316,12 @@ ORDER BY r.data_registro DESC;]]>
 				<textElement verticalAlignment="Middle">
 					<font fontName="SansSerif" size="12"/>
 				</textElement>
-				<textFieldExpression><![CDATA[new java.text.SimpleDateFormat("dd/MM/yyyy HH:mm:ss", new java.util.Locale("pt", "BR"))
-    .format(new java.util.Date())]]></textFieldExpression>
+				<textFieldExpression><![CDATA[new java.text.SimpleDateFormat("dd/MM/yyyy HH:mm:ss")
+    .format(
+        new java.util.Date(
+            new java.util.Date().getTime() - (3 * 60 * 60 * 1000)
+        )
+    )]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="490" y="20" width="30" height="30" uuid="4e8e3036-e2b0-49e6-9a69-29a52e101cd5">
